@@ -407,6 +407,7 @@ typedef struct __dc1394_camera
   // system/firmware information
   int                  port;
   uint16_t             node;
+  uint16_t             unit;
   uint64_t             guid;
   uint32_t             ud_reg_tag_12;
   uint32_t             ud_reg_tag_13;
@@ -902,6 +903,7 @@ typedef struct __dc1394camera_list_t
 {
   uint32_t      num;
   uint64_t     *guids;
+  uint16_t     *units;
 } dc1394camera_list_t;
 
 typedef struct __dc1394_t
@@ -909,6 +911,7 @@ typedef struct __dc1394_t
   // a list of cameras (GUIDs) attached to this host. Two vectors are used to deal with
   // async changes. Mutexes will have to be used too.
   uint64_t* guids;
+  uint16_t* units;
   uint32_t  n_cam;
 }
 dc1394_t;
@@ -917,7 +920,7 @@ dc1394_t* dc1394_new(void);
 void dc1394_free(dc1394_t *dc1394);
 dc1394error_t dc1394_enumerate_cameras(dc1394_t *dc1394, dc1394camera_list_t **list);
 void dc1394_free_camera_list(dc1394camera_list_t *list);
-dc1394camera_t* dc1394_camera_new(dc1394_t *dc1394, uint64_t guid);
+dc1394camera_t* dc1394_camera_new(dc1394_t *dc1394, uint64_t guid, uint16_t unit);
 void dc1394_camera_free(dc1394camera_t *camera);
 
 
